--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,4 +1,6 @@
 <%= link_to "Browse All Items", items_path %>
 
-<%= link_to "Browse By Category", categories_path %>
+<% @categories.each do |category| %>
+  <%= link_to "Browse By Category: #{category.name}", category %>
+<% end %>
 
