--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,4 +2,5 @@
 
 <% @items.each do |item| %>
   <%= link_to  item.name, item %>
+  <%= button_to  'Add to Cart', cart_path(item_id: item) %>
 <% end %>
