--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,12 @@
 </head>
 <body>
 
-<%= session[:cart].inspect %>
-<%= @cart.inspect %>
+<%= link_to "Log in", login_path %>
+
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, id: "flash_#{name}" %>
+<% end %>
+
 <%= yield %>
 
 </body>
