--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,1 +1,12 @@
 <h3><%= current_user.username %>'s Orders</h3>
+
+<ol>
+  <% @orders.each do |order| %>
+    <% order.cart.each do |item_id, quantity| %>
+    <li><%= Item.find(item_id).name %>
+<%= quantity %>
+  </li>
+<% end %>
+<% end %>
+</ol>
+
