User can logout from any page.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
 </head>
 <body>
 
-<%= @cart.inspect %>
 <div class="log_in">
-<%= link_to "Log in", login_path %>
+  <% if current_user %>
+    <%= link_to "Log out", logout_path, method: :delete %>
+  <% else %>
+    <%= link_to "Log in", login_path %>
+  <% end %>
 </div>
 
 <% flash.each do |name, msg| %>
