--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,3 +5,7 @@
 <p class="item-price"><%= number_to_currency(@item.price) %></p>
 
 <%= button_to  'Add to Cart', cart_path(item_id: @item) %>
+
+<% if @item.retired? %>
+  <p class="retired-item"><%= "#{@item.name} has been retired from the menu" %></p>
+<% end %>
