--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DinnerDash</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>DinnerDash</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<%= @cart.inspect %>
-<div class="log_in">
-<%= link_to "Log in", login_path %>
-</div>
+  <body>
 
-<% flash.each do |name, msg| %>
-  <%= content_tag :div, msg, id: "flash_#{name}" %>
-<% end %>
+    <%= render "shared/navigation" %>
 
-<%= yield %>
+    <div id="main-container" class="container">
+      <div class="row">
+        <%= @cart.inspect %>
 
-</body>
+          <div class="messsages">
+            <% flash.each do |name, msg| %>
+              <%= content_tag :div, msg, id: "flash_#{name}" %>
+            <% end %>
+          </div>
+
+        <div class="col-xs-3">
+
+        </div>
+
+        <div class="col-xs-9">
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+
+  </body>
 </html>
