--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
     <%= render "shared/navigation" %>
 
-    <div id="main-container" class="container">
+    <div id="main-container" class="container-fluid">
       <div class="row">
         <%= @cart.inspect %>
 
@@ -20,11 +20,9 @@
               <%= content_tag :div, msg, id: "flash_#{name}" %>
             <% end %>
           </div>
-
         <div class="col-xs-3">
 
         </div>
-
         <div class="col-xs-9">
           <%= yield %>
         </div>
