--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,35 +7,23 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= @cart.inspect %>
 
-<div class="log_in">
+<!-- <div class="log_in">
   <% if current_user %>
     <%= link_to "Log out", logout_path, method: :delete %>
   <% else %>
     <%= link_to "Log in", login_path %>
   <% end %>
-</div>
+</div> -->
 
-    <%= render "shared/navigation" %>
-
-    <div id="main-container" class="container-fluid">
-      <div class="row">
-        <%= @cart.inspect %>
 
           <div class="messsages">
             <% flash.each do |name, msg| %>
               <%= content_tag :div, msg, id: "flash_#{name}" %>
             <% end %>
           </div>
-        <div class="col-xs-3">
 
-        </div>
-        <div class="col-xs-9">
           <%= yield %>
-        </div>
-      </div>
-    </div>
 
   </body>
 </html>
