--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -6,6 +6,9 @@
 </ul>
 
 
-    <% @categories.each do |category| %>
-      <%= link_to "Browse By Category: #{category.name}", category %>
-    <% end %>
+<h3>Browse by Category</h3>
+<ul>
+<% @categories.each do |category| %>
+  <li><%= link_to "#{category.name}", category %></li>
+<% end %>
+</ul>
