--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,11 +1,11 @@
-<h1 class="item-title"><%= @item.name %></h1>
+<h1 id="item-title"><%= @item.name %></h1>
 
-<p class="item-description"><%= @item.description %></p>
+<p id="item-description"><%= @item.description %></p>
 
-<p class="item-price"><%= number_to_currency(@item.price) %></p>
+<p id="item-price"><%= number_to_currency(@item.price) %></p>
 
-<%= button_to  'Add to Cart', cart_path(item_id: @item) %>
+<div id="item-button"><%= button_to  'Add to Cart', cart_path(item_id: @item) %></div>
 
 <% if @item.retired? %>
-  <p class="retired-item"><%= "#{@item.name} has been retired from the menu" %></p>
+  <p id="retired-item"><%= "#{@item.name} has been retired from the menu" %></p>
 <% end %>
