all five categories vertically aligned. Need to have equal padding from right to left and stay center. Going to fix nav bar now

--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -13,6 +13,10 @@
   </div>
 </div>
 
+   <ul>
     <% @categories.each do |category| %>
-      <%= link_to "Browse By Category: #{category.name}", category %>
+    <div class="category col-md-2">
+      <li><%= link_to "Browse By Category: #{category.name}", category %> </li>
+    </div>
     <% end %>
+  </ul>
