--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -5,7 +5,6 @@
   <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
 </ul>
 
-
 <% if !@cart_contents.empty? %>
   <ul>
   <% @cart_contents.each do |item_id, quantity| %>
@@ -17,6 +16,7 @@
     </li>
 <% end %>
   </ul>
+    <%= button_to "Checkout", orders_path %>
 <% else %>
   <p> "There are no items in your cart" </p>
 <% end %>
