--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,7 +7,4 @@
 
 <h3>All Items</h3>
 
-<% @items.each do |item| %>
-  <%= link_to  item.name, item %>
-  <%= button_to  'Add to Cart', cart_path(item_id: item) %>
-<% end %>
+<%= render partial: "items_list" %>
