--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
     <%= link_to "Log in", login_path %>
   <% end %>
 </div> -->
-    <div class="main-container">
+<%= render "layouts/nav_bar" %>
+
+    <div class="container">
+
       <div class="messsages">
         <% flash.each do |name, msg| %>
           <%= content_tag :div, msg, id: "flash_#{name}" %>
