--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,12 +4,11 @@ body {
 
 .logo {
   margin-right: 10px;
-  margin-bottom: 5px;
 }
 
 .navbar {
   margin-right: 23px;
-  margin-top: 23px;
+  margin-top: 35px;
 }
 
 #item-title {
@@ -36,6 +35,10 @@ body {
 }
 
 .category {
-  padding-left: 20px;
+  padding-left: 90px;
   list-style-type: none;
 }
+
+// .row {
+//   margin-top: 200px;
+// }
