--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,18 +1,6 @@
+<%= render 'shared/nav_bar' %>
+
 <div class="row">
-  <div class="col-md-1 logo">
-    <%= image_tag "toasted_logo.png" %>
-  </div>
-
-  <div class="col-md-7 col-md-offset-2 navbar">
-    <ul class="nav nav-tabs" role="tablist">
-      <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
-      <li><%= link_to "Log in", login_path, class: 'btn btn-link btn-sm'  %></li>
-      <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-sm' %></li>
-      <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
-    </ul>
-  </div>
-</div>
-
    <ul>
     <% @categories.each do |category| %>
     <div class="category col-md-2">
@@ -20,3 +8,4 @@
     </div>
     <% end %>
   </ul>
+</div>
