--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -7,7 +7,14 @@
   <div class="col-md-7 col-md-offset-2 navbar">
     <ul class="nav nav-tabs" role="tablist">
       <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
-      <li><%= link_to "Log in", login_path, class: 'btn btn-link btn-sm'  %></li>
+      <li><div class="log_in", role="tablist">
+        <% if current_user %>
+          <%= link_to "Log out", logout_path, method: :delete %>
+        <% else %>
+          <%= link_to "Log in", login_path %>
+        <% end %>
+      </div></li>
+      <!-- <li><%= link_to "Log in", login_path, class: 'btn btn-link btn-sm'  %></li> -->
       <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-sm' %></li>
       <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
     </ul>
