--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,6 +1,7 @@
 <%= render 'shared/nav_bar' %>
 
 <div class="row">
+  <div class="item_cat">
    <ul>
     <% @categories.each do |category| %>
     <div class="category col-md-2">
@@ -8,4 +9,6 @@
     </div>
     <% end %>
   </ul>
+  <div style="clear:both;"> </div>
+</div>
 </div>
