--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -7,11 +7,11 @@
   <div class="col-md-7 col-md-offset-2 navbar">
     <ul class="nav nav-tabs" role="tablist">
       <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
-      <li><div class="log_in", role="tablist">
+      <li><div class="log_in">
         <% if current_user %>
-          <%= link_to "Log out", logout_path, method: :delete %>
+          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-sm' %>
         <% else %>
-          <%= link_to "Log in", login_path %>
+          <%= link_to "Log in", login_path, class: 'btn btn-link btn-sm' %>
         <% end %>
       </div></li>
       <!-- <li><%= link_to "Log in", login_path, class: 'btn btn-link btn-sm'  %></li> -->
