--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 <%= render "layouts/nav_bar" %>
 
-    <div class="container">
+    <div class="container-fluid">
 
       <div class="messsages">
         <% flash.each do |name, msg| %>
