--- a/app/views/items/_items_list.html.erb
+++ b/app/views/items/_items_list.html.erb
@@ -1,4 +1,15 @@
-<% @items.each do |item| %>
-  <%= link_to  item.name, item %>
-  <%= button_to  'Add to Cart', cart_path(item_id: item) %>
-<% end %>
+<div id="menu">
+  <h1>All Items</h1>
+  <div class="row">
+    <% @items.each do |item| %>
+      <div class="floaters">
+        <div class="toasty"><%= image_tag "default_toast.jpg" %></div>
+        <h4 class="item-title"> <%= link_to  item.name, item %> </hr>
+        <div class="item-cart-button">
+          <%= button_to  'Add to Cart', cart_path(item_id: item) %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+
+</div>
