Order total on order history page. Added order model tests

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,9 +2,6 @@
 
 <ol>
   <% @orders.each do |order| %>
-    <li>Status: <%= order.status %></li>
-    <li>Updated At: <%= order.updated_at %></li>
-
     <ol>
       <% order.cart.each do |item_id, quantity| %>
       <li>
@@ -15,5 +12,8 @@
       <% end %>
     </ol>
 
+    <li>Status: <%= order.status %></li>
+    <li>Updated At: <%= order.format_time %></li>
+    <li>Order Total: <%= order.total %></li>
   <% end %>
 </ol>
