--- a/app/views/admin/dashboard/_nav_bar.html.erb
+++ b/app/views/admin/dashboard/_nav_bar.html.erb
@@ -13,7 +13,7 @@
           <%= link_to "Log in", login_path, class: 'btn btn-link btn-sm' %>
         <% end %>
       </li>
-      <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
+      <li><%= link_to "Manage Categories", admin_categories_path, class: 'btn btn-link btn-sm' %></li>
       <li><%= link_to "Manage Items", admin_items_path, class: 'btn btn-link btn-sm' %></li>
       <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
     </ul>
