Admin clicks link of specific Category to be taken to a page of Items within that category

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <% @categories.each do |category| %>
       <div class="floaters">
-        <h4 class="item-title"> <%= link_to  category.name, category %> </hr>
+        <h4 class="item-title"> <%= link_to  category.name, admin_category_path(category) %> </hr>
       </div>
     <% end %>
   </div>
