--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -7,8 +7,8 @@
       <% order.items_with_quantity.each do |item, quantity|%>
         <li>
           <%= link_to item.name, item_path(item) %>
-          <%= quantity %> @ <%= order.format_currency(item.price) %>
-          = <%= order.line_item_total(item, quantity) %>
+          <%= quantity %> @ <%= number_to_currency(item.price) %>
+          = <%= number_to_currency(order.line_item_total(item, quantity)) %>
         </li>
       <% end %>
     </ol>
@@ -16,6 +16,6 @@
     <li>Status: <%= order.status %></li>
     <li>Updated: <%= time_ago_in_words(order.updated_at) %> ago</li>
 
-    <li>Order Total: <%= order.total %></li>
+    <li>Order Total: <%= number_to_currency(order.total) %></li>
   <% end %>
 </ol>
