added conditionals in views to only show checkout button and order history if user is logged in

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -12,7 +12,9 @@
     <% end %>
 
   </ul>
-    <%= button_to "Checkout", orders_path %>
+    <% if current_user %>
+      <%= button_to "Checkout", orders_path %>
+    <% end %>
 <% else %>
   <p> "There are no items in your cart" </p>
 <% end %>
