--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -15,7 +15,9 @@
       </li>
       <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
       <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-sm' %></li>
-      <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
+      <% if current_user %>
+        <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
+      <% end %>
     </ul>
   </div>
 </div>
