--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,8 +1,8 @@
 <h3>Manage <%= @category.name %></h3>
 
 <div id="menu">
-  <h1>All Items</h1>
-  <div class="row">
+  <h1>All Items</h1><br>
+  <%= link_to  'Add Item', new_admin_item_category_path(category_id: params[:id]), class: 'btn btn-info btn-lg' %><br>
     <% @items.each do |item| %>
       <div class="floaters">
         <h4 class="item-title"> <%= link_to  item.name, item %> </hr>
