--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,9 +1,10 @@
 <div id="menu">
-  <h1>Manage Items</h1>
+  <h1>Manage Items</h1><br>
+  <%= link_to  'Create Item', new_admin_item_path, class: 'btn btn-info btn-lg' %><br><br>
   <div class="row">
     <% @items.each do |item| %>
       <div class="floaters">
-        <h4 class="item-title"> <%= link_to  item.name, item %> </hr>
+        <h4 class="item-title"> <%= link_to  item.name, admin_item_path(item) %> </hr>
       </div>
     <% end %>
   </div>
