Update toast form to upload a file

--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -5,6 +5,8 @@
   <%= f.label "Description" %>
   <%= f.text_field :description %>
   <%= f.label "Price" %>
-  <%= f.text_field :price %>
+  <%= f.text_field :price %><br><br>
+  <%= f.label "Upload Image" %>
+  <%= f.file_field :avatar %><br>
   <%= f.submit "Create Toast" %>
 <% end %>
