--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -8,5 +8,7 @@
   <%= f.text_field :price %><br><br>
   <%= f.label "Upload Image" %>
   <%= f.file_field :avatar %><br>
+  <%= f.label :remote_avatar_url, "or image URL" %>
+  <%= f.text_field :remote_avatar_url %>
   <%= f.submit "Create Toast" %>
 <% end %>
