--- a/app/views/items/_items_list.html.erb
+++ b/app/views/items/_items_list.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <% @items.each do |item| %>
       <div class="floaters">
-        <div class="toasty"><%= image_tag "default_toast.jpg" %></div>
+        <div class="toasty"><%= image_tag item.avatar.url(:thumb) %></div>
         <h4 class="item-title"> <%= link_to  item.name, item %> </hr>
         <div class="item-cart-button">
           <%= button_to  'Add to Cart', cart_path(item_id: item) %>
