--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -5,7 +5,7 @@
 <p id="item-price"><%= number_to_currency(@item.price) %></p>
 
 <figure class="default-pic">
-  <%= image_tag("default_toast.jpg") %>
+  <%= image_tag @item.avatar.url %>
 </figure>
 
 
