--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -8,15 +8,15 @@
     <ul class="nav nav-tabs" role="tablist">
       <li>
         <% if current_user %>
-          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-sm' %>
+          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-lg' %>
         <% else %>
-          <%= link_to "Log in", login_path, class: 'btn btn-link btn-sm' %>
+          <%= link_to "Log in", login_path, class: 'btn btn-link btn-lg' %>
         <% end %>
       </li>
-      <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-sm' %></li>
-      <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-sm' %></li>
+      <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-lg' %></li>
+      <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-lg' %></li>
       <% if current_user %>
-        <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-sm' %></li>
+        <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-lg' %></li>
       <% end %>
     </ul>
   </div>
