--- a/app/views/admin/dashboard/_nav_bar.html.erb
+++ b/app/views/admin/dashboard/_nav_bar.html.erb
@@ -8,14 +8,14 @@
     <ul class="nav nav-tabs" role="tablist">
       <li>
         <% if current_user %>
-          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-md' %>
+          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-md active' %>
         <% else %>
-          <%= link_to "Log in", login_path, class: 'btn btn-link btn-md' %>
+          <%= link_to "Log in", login_path, class: 'btn btn-link btn-md active' %>
         <% end %>
       </li>
-      <li><%= link_to "Manage Categories", admin_categories_path, class: 'btn btn-link btn-md' %></li>
-      <li><%= link_to "Manage Items", admin_items_path, class: 'btn btn-link btn-md' %></li>
-      <li><%= link_to "Manage Orders", admin_orders_path, class: 'btn btn-info btn-md' %></li>
+      <li><%= link_to "Manage Categories", admin_categories_path, class: 'btn btn-link btn-md active' %></li>
+      <li><%= link_to "Manage Items", admin_items_path, class: 'btn btn-link btn-md active' %></li>
+      <li><%= link_to "Manage Orders", admin_orders_path, class: 'btn btn-info btn-md active' %></li>
     </ul>
   </div>
 </div>
