clicking on log now takes you back to home page. On both admin mode as well as un/authenticated user

--- a/app/views/admin/dashboard/_nav_bar.html.erb
+++ b/app/views/admin/dashboard/_nav_bar.html.erb
@@ -1,7 +1,7 @@
 <%= nav_bar static: :top, responsive: true do %>
 <div class="row">
   <div class="col-md-1 logo">
-    <%= image_tag "toasted_logo.png" %>
+    <a href="/admin"><%= image_tag "toasted_logo.png" %></a>
   </div>
 
   <div class="col-md-7 col-md-offset-2 navbar">
