--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,14 +1,14 @@
 <%= nav_bar static: :top, responsive: true do %>
 <div class="row">
   <div class="col-md-1 logo">
-    <%= image_tag "toasted_logo.png" %>
+    <a href="/"><%= image_tag "toasted_logo.png" %></a>
   </div>
 
   <div class="col-md-7 col-md-offset-2 navbar">
     <ul class="nav nav-tabs" role="tablist">
       <li>
         <% if current_user %>
-          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-lg active' %>
+          <%= link_to "Log out", logout_path, method: :delete, class: 'btn btn-link btn-lg active'%>
         <% else %>
           <%= link_to "Log in", login_path, class: 'btn btn-link btn-lg active' %>
         <% end %>
