--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,3 +1,6 @@
-<h1>Manage Orders</h1>
-
-<%= render partial: "order", collection: @orders %>
+<% if @orders.empty? %>
+  <p>No orders of this status</p>
+<% else %>
+  <h1>Manage <%= @orders.first.status.capitalize %> Orders</h1>
+  <%= render partial: "order", collection: @orders %>
+<% end %>
