--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -5,7 +5,7 @@
    <ul>
     <% @categories.each do |category| %>
     <div class="category col-md-2">
-      <li><%= link_to "#{category.name}", category %> </li>
+      <li><%= link_to "#{category.name}", category %> <%= image_tag("reuben1.png", alt: "reuben") %> </li>
     </div>
     <% end %>
   </ul>
