--- a/app/views/admin/orders/_pay_or_cancel.html.erb
+++ b/app/views/admin/orders/_pay_or_cancel.html.erb
@@ -1,7 +1,7 @@
 <%= form_for [:admin, @order] do |f| %>
-<div id="completed">
-   <%= f.radio_button(:status, "completed") %>
-   <%= f.label(:status, "Complete") %>
+<div id="paid">
+   <%= f.radio_button(:status, "paid") %>
+   <%= f.label(:status, "Pay") %>
  </div>
  <div id="cancelled">
    <%= f.radio_button(:status, "cancelled") %>
