--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -17,9 +17,9 @@
 
 <li>Status: <%= @order.status %>
 <% if @order.status == "ordered" %>
-  <%= render partial: "cancel_button" %>
+  <%= render partial: "pay_or_cancel" %>
 <% elsif @order.paid? %>
-    <%= render partial: "pay_or_cancel" %>
+    <%= render partial: "complete_or_cancel" %>
 <% end %>
  </li>
 
