added extra buttons to take the user back one page. Realized we either need to make buttons uniform or go fuck wild with different colors. This needs to happen before customization of buttons probably.

--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,4 +1,6 @@
-
+<%= link_to "Back to Items", items_path, class: "btn btn-info btn-small active"  %>
+<br>
+<br>
 <% if !@cart_contents.empty? %>
   <ul>
 
