--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -12,3 +12,27 @@
   <%= f.text_field :remote_avatar_url %>
   <%= f.submit "Create Toast" %>
 <% end %>
+
+<!-- <h3>Create Toast</h3>
+<form role="form">
+  <div class="create-item-form">
+    <label for="Name">Name</label>
+      <input type :name class="form-control" id="Name" placeholder="Enter name">
+    </div>
+    <div class="form-group">
+      <label for="InputDescription">Description</label>
+      <input type :description class="form-control" id="description" placeholder="Add a creative description">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputFile">File input</label>
+      <input type="file" id="exampleInputFile">
+      <p class="help-block">Example block-level help text here.</p>
+    </div>
+    <div class="checkbox">
+      <label>
+        <input type="checkbox"> Check me out
+      </label>
+    </div>
+    <button type="submit" class="btn btn-default">Create Toast</button>
+  </div>
+</form> -->
