--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,19 +1,19 @@
 <h3>Browse by Category</h3>
 
-<!-- <div class="row">
+<div class="row">
   <div class="item_cat">
    <ul>
     <% @categories.each do |category| %>
     <div class="category col-md-2">
-      <li><%= link_to "#{category.name}", category %> <%= image_tag("reuben1.png", alt: "reuben") %> </li>
+      <li><%= link_to "#{category.name}", category %> </li>
     </div>
     <% end %>
   </ul>
   <div style="clear:both;"> </div>
 </div>
-</div> -->
+</div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="item_cat">
    <ul>
     <div class="category col-md-2"><li><a href="/categories/1">Side dishes<%= image_tag("reuben1.png", alt: "Side dishes") %></a></li></div>
@@ -24,4 +24,4 @@
   </ul>
   <div style="clear:both;"> </div>
 </div>
-</div>
+</div> -->
