Ability to retire item, but will change to radio button

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -17,3 +17,5 @@
   <%= f.text_field :remote_avatar_url %>
   <%= f.submit "Update Item" %>
 <% end %>
+  <%= link_to "Retire Item", admin_item_path(@item, retired: true), method: :put %>
+  <%= link_to "Delete Item", "#" %>
