--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -13,7 +13,7 @@
 
   </ul>
     <% if current_user %>
-      <%= button_to "Checkout", orders_path %>
+      <%= button_to "Checkout", orders_path, data: { confirm: "Proceed to Checkout?" } %>
     <% end %>
 <% else %>
   <p> "There are no items in your cart" </p>
