Added conditional to add to cart button on item show page

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -11,6 +11,6 @@
 
 <% if @item.retired? %>
   <p id="retired-item"><%= "#{@item.name} has been retired from the menu" %></p>
-<% else %>
+<% elsif current_user.default? %>
   <%= button_to  'Add to Cart', cart_path(item_id: @item) %>
 <% end %>
