--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -13,6 +13,6 @@
 
 <% if @item.retired? %>
   <p id="retired-item"><%= "#{@item.name} has been retired from the menu" %></p>
-<% elsif current_user.default? %>
+<% elsif current_user.nil? || current_user.default? %>
   <%= button_to  'Add to Cart', cart_path(item_id: @item), class: "btn btn-info btn-small active" %>
 <% end %>
