--- a/app/views/admin/dashboard/_nav_bar.html.erb
+++ b/app/views/admin/dashboard/_nav_bar.html.erb
@@ -15,7 +15,7 @@
       </li>
       <li><%= link_to "Manage Categories", admin_categories_path, class: 'btn btn-link btn-md active' %></li>
       <li><%= link_to "Manage Items", admin_items_path, class: 'btn btn-link btn-md active' %></li>
-      <li><%= link_to "Manage Orders", admin_orders_dashboard_path, class: 'btn btn-info btn-md active' %></li>
+      <li><%= link_to "Manage Orders", admin_orders_dashboard_path, class: 'btn btn-link btn-md active' %></li>
     </ul>
   </div>
 </div>
