admin can now add a category to the list of categories. Flash message works, will test next. Will probably add a random Remove Category next as well

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,5 +1,7 @@
 <div id="menu">
   <h1>Manage Categories</h1>
+  <br>
+  <%= link_to "Add Category", new_admin_category_path %>
   <div class="row">
     <% @categories.each do |category| %>
       <div class="floaters">
