--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,8 @@
 <div id="menu">
   <h1>Manage Categories</h1>
   <br>
-  <%= link_to "Add Category", new_admin_category_path %>
+  <%= link_to "Add Category", new_admin_category_path, class: "btn btn-info btn-lg" %>
+  <br>
   <div class="row">
     <% @categories.each do |category| %>
       <div class="floaters">
