--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -1,21 +1,30 @@
 <%= link_to "Back to Items", items_path, class: "btn btn-info btn-small active"  %>
 <br>
 <br>
+<h3 id="cart-title">Shopping Cart</h3>
 <% if !@cart_contents.empty? %>
-  <ul>
-
-    <% @cart.items_with_quantity.each do |item, quantity| %>
-      <li>
-        <%= item.name %>
-        <%= quantity %>
-        <%= button_to "Add Item", cart_path(item_id: item.id) %>
-        <%= button_to "Remove Item", cart_path(item), method: :delete %>
-      </li>
-    <% end %>
-
-  </ul>
+  <table id="cart">
+    <th>
+        <tr>
+          <th>Item</th>
+          <th>Quantity</th>
+          <th>Increase Quantity</th>
+          <th>Decrease Quantity</th>
+        </tr>
+      </th>
+      <tbody>
+        <% @cart.items_with_quantity.each do |item, quantity| %>
+          <tr>
+            <td><h4><%= item.name %></h4></td>
+            <td>Quantity: <%= quantity %></td>
+            <td><%= button_to "Add Item", cart_path(item_id: item.id) %></td>
+            <td><%= button_to "Remove Item", cart_path(item), method: :delete %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
     <% if current_user %>
-      <%= button_to "Checkout", orders_path, data: { confirm: "Proceed to Checkout?" } %>
+      <%= button_to "Checkout", orders_path, class: "btn-info", data: { confirm: "Proceed to Checkout?" } %>
     <% end %>
 <% else %>
   <p> "There are no items in your cart" </p>
