--- a/app/views/cart/index.html.erb
+++ b/app/views/cart/index.html.erb
@@ -3,7 +3,7 @@
 <br>
 <h3 id="cart-title">Shopping Cart</h3>
 <% if !@cart_contents.empty? %>
-  <table id="cart">
+  <table id="cart" class="table table-striped">
     <th>
         <tr>
           <th>Item</th>
