--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -16,7 +16,7 @@
       <li><%= link_to "Cart", cart_path, class: 'btn btn-link btn-lg active' %></li>
       <li><%= link_to "Browse All Items", items_path, class: 'btn btn-link btn-lg active' %></li>
       <% if current_user %>
-        <li><%= link_to "Order History", orders_path, class: 'btn btn-info btn-lg active' %></li>
+        <li><%= link_to "Order History", orders_path, class: 'btn btn-link btn-lg active' %></li>
       <% end %>
     </ul>
   </div>
