added hero image

--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,6 +1,10 @@
-<h3>Browse by Category</h3>
+<!-- <figure>
+  <%= image_tag("toast_hero.jpg") %>
+</figure>
 
-<div class="row">
+<h4>Browse by Category</h4> -->
+
+<div class="row hero">
   <div class="item_cat">
    <ul>
     <% @categories.each do |category| %>
