--- a/app/assets/stylesheets/_category.scss
+++ b/app/assets/stylesheets/_category.scss
@@ -1,9 +1,22 @@
+@import 'base';
+
 .category {
   padding-left: 10px;
   padding-right: 10px;
   list-style-type: none;
   margin-left: 15px;
   margin-right: 15px;
+
+  li{
+    @include border-radius(5px);
+    border:1px solid white;
+    color:white;
+    padding:10px;
+    margin-top:170px;
+    margin-bottom:170px;
+    text-align:center;
+    background:rgba(255, 255, 255, 0.83)
+  }
 
 }
 
