--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,10 @@ body {
   margin-right: 10px;
 }
 
+.hero{
+  background-image: url(hero_pic.png);
+}
+
 .navbar {
   margin-right: 23px;
   margin-top: 35px;
@@ -55,6 +59,7 @@ input[type="submit"] {
 
 h4 {
   text-align: center;
+  margin-bottom: 20px;
 }
 
 .login-form div{
