--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -36,6 +36,7 @@ body {
   width: 23%;
   float: left;
   margin: 10px;
+  text-align:center;
 }
 
 li {
@@ -62,8 +63,8 @@ h4 {
   margin-bottom: 20px;
 }
 
-.login-form div{
-
+.login-form {
+  width: 70%;
 }
 
 .item-create {
