--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -5,7 +5,10 @@
     <p>No orders of this status</p>
   <% elsif @orders == Order.all %>
     <h1>Manage All Orders</h1>
-    <%= render partial: "order", collection: @orders %>
+    <%= render 'filter' %>
+    <div class="orders">
+      <%= render partial: "order", collection: @orders %>
+    </div>
   <% else %>
     <h1>Manage <%= @orders.first.status.capitalize %> Orders</h1>
     <%= render partial: "order", collection: @orders %>
