--- a/app/assets/stylesheets/_orders.scss
+++ b/app/assets/stylesheets/_orders.scss
@@ -9,8 +9,11 @@
   table{
     margin:0 auto;
     display:block;
-    width:50%;
+    width:400px;
     text-align:center;
     margin-bottom: 30px;
+    padding:10px;
+    border:3px solid white;
+    background:rgba(253, 253, 253, 0.78);
   }
 }
