--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,15 +22,8 @@ body {
 
 .center{
   width:30%;
-  margin-bottom:
+  margin-bottom:10px;
 }
-
-
-// .item_cat {
-//   // width: 100%;
-//   // margin: 0 auto;
-//   border: 1px solid red;
-// }
 
 li {
   list-style-type:none;
@@ -40,7 +33,6 @@ input[type="submit"] {
   width: 60%;
   display:block;
   text-align:center;
-  // margin: 0 auto;
   @include border-radius(5px);
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -52,7 +44,6 @@ input[type="submit"] {
   text-align:center;
   margin-bottom:50px;
 }
-
 
 h4 {
   text-align: center;
