--- a/app/views/items/_items_list.html.erb
+++ b/app/views/items/_items_list.html.erb
@@ -1,6 +1,6 @@
 <div id="menu">
   <br>
-  <%= link_to "Return to Home Page", href="/", class: "btn btn-primary btn-lg btn-md active center" %>
+  <%= link_to "Return to Home Page", href="/", class: "btn btn-info btn-lg btn-md active center" %>
   <br>
   <div class="row">
     <% @items.each do |item| %>
