--- a/app/assets/stylesheets/_session.scss
+++ b/app/assets/stylesheets/_session.scss
@@ -8,6 +8,7 @@
   padding:30px;
   padding-left:220px;
   border:3px solid white;
+  background:rgba(253, 253, 253, 0.78);
 
   input#check-in{
     margin:none;
@@ -15,7 +16,6 @@
 
   div{
     padding:10px;
-    // width:50%;
     text-align:left;
 
     label{
@@ -24,8 +24,6 @@
     }
 
     input{
-      text-align:right;
-      margin-left:15px;
       @include border-radius(5px);
     }
   }
