--- a/app/assets/stylesheets/_table.scss
+++ b/app/assets/stylesheets/_table.scss
@@ -1,20 +1,38 @@
-#order-title{
-  text-align:center;
-  margin:0 auto;
-  margin-bottom: 30px;
-}
+@import "base";
 
 #order-history, #cart{
-
   table{
     margin:0 auto;
     display:block;
-    width:50%;
+    width:500px;
     text-align:center;
     margin-bottom: 30px;
+    padding:10px;
+    border:3px solid white;
+    padding-left:70px;
+    background:rgba(253, 253, 253, 0.78);
+    @include border-radius(5px);
 
-    td, th{
+    th{
       text-align:center;
+    }
+
+    tfoot td{
+      border:1px solid gray;
+    }
+  }
+}
+
+#cart{
+  table{
+    width:530px;
+    padding-left:10px;
+
+    input{
+      text-align:center;
+      margin:0 auto;
+      display:block;
+      width:100%;
     }
   }
 }
