--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,3 +1,6 @@
+<%= link_to "Back to Items", items_path, class: "btn btn-info btn-small active" %>
+<!-- <a class="btn btn-info btn-small active" href="/items">Back to Items</a> -->
+
 <h3 id="order-title"><%= current_user.username %>'s Orders</h3>
 
 <div id="order-history">
@@ -10,7 +13,7 @@
         <th>Price</th>
         <th>Total</th>
       </tr>
-      
+
       <% order.items_with_quantity.each do |item, quantity|%>
         <tr>
           <td><%= link_to item.name, item_path(item) %></td>
@@ -22,8 +25,8 @@
 
       <tfoot>
         <tr>
-          <td colspan="2">Status: <%= order.status %></td>
-          <td colspan="2">Updated: <%= time_ago_in_words(order.updated_at) %> ago</td>
+          <td colspan="1">Status: <%= order.status %></td>
+          <td colspan="3">Updated: <%= time_ago_in_words(order.updated_at) %> ago</td>
         </tr>
         <tr>
           <td colspan="4" class="total">Order Total: <%= number_to_currency(order.total) %></td>
