--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -6,7 +6,7 @@
   <div class="row cats">
     <% @categories.each do |category| %>
       <div class="floaters">
-        <h4 class="item-title"> <%= link_to  category.name, admin_category_path(category) %> </hr>
+        <h4 class="item-title"> <%= link_to  category.name, admin_category_path(category) %> </h4>
       </div>
     <% end %>
   </div>
