--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -4,7 +4,7 @@
   <%= link_to  'Add Item', new_admin_item_category_path(category_id: params[:id]), class: 'btn btn-info btn-lg' %><br>
     <% @items.each do |item| %>
       <div class="floaters">
-        <h4 class="item-title"> <%= link_to  item.name, admin_item_path(item) %> </hr>
+        <h4 class="item-title"> <%= link_to  item.name, admin_item_path(item) %> </h4>
         <div class="item-cart-button">
           <%= button_to  'Remove Item', admin_item_category_path(item_id: item, category_id: params[:id]), method: :delete, data: { confirm: 'Are you sure?' }%>
         </div>
