--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <% @items.each do |item| %>
       <div class="floaters">
-        <h4 class="item-title"> <%= link_to  item.name, edit_admin_item_path(item) %> </hr>
+        <h4 class="item-title"> <%= link_to  item.name, edit_admin_item_path(item) %> </h4>
       </div>
     <% end %>
   </div>
