--- a/app/views/items/_items_list.html.erb
+++ b/app/views/items/_items_list.html.erb
@@ -6,7 +6,7 @@
     <% @items.each do |item| %>
       <div class="floaters">
         <div class="toasty"><%= image_tag item.avatar.url(:thumb) %></div>
-        <h4 class="item-title"> <%= link_to  item.name, item %> </hr>
+        <h4 class="item-title"> <%= link_to  item.name, item %> </h4>
 
         <div class="item-cart-button">
           <br>
