--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,1 +1,3 @@
-<h3 id="admin-title">Administrator Dashboard</h3>
+<div id="admin-dash">
+  <h3 id="admin-title">Administrator Dashboard</h3>
+</div>
