--- a/app/assets/stylesheets/_orders.scss
+++ b/app/assets/stylesheets/_orders.scss
@@ -3,3 +3,25 @@
   margin:0 auto;
   margin-bottom: 30px;
 }
+
+.admin-order-title{
+  text-align:center;
+  margin-bottom:30px;
+}
+
+.admin-order-list{
+  margin:0 auto;
+  margin-top:20px;
+  width:400px;
+  text-align:center;
+  border:1px solid white;
+  background:rgba(255, 255, 255, 0.91);
+
+  th{
+    text-align:center;
+  }
+
+  td{
+    padding:10px;
+  }
+}
