Jquery showing an all option on dropdown filter

--- a/app/views/admin/orders/_filter.html.erb
+++ b/app/views/admin/orders/_filter.html.erb
@@ -1,4 +1,5 @@
 <div class="filter">
   <label>Filter By Status</label>
-  <%= select("order", "filter_status", Order.statuses, {include_blank: true}) %>
+  <%= select("order", "filter_status", Order.statuses.keys + ["all"], selected: "all") %>
 </div>
+
