--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -11,5 +11,10 @@
   </table>
 <% else %>
   <h1 class="admin-order-title">Manage <%= @orders.first.status.capitalize %> Orders</h1>
+  <table class="admin-order-list table table-striped">
+    <tr>
+      <th>Order Id</th>
+      <th>Updated</th>
+    </tr>
   <%= render partial: "order", collection: @orders %>
 <% end %>
