--- a/app/views/admin/orders/_filter.html.erb
+++ b/app/views/admin/orders/_filter.html.erb
@@ -1,5 +1,4 @@
 <div class="filter">
   <label>Filter By Status</label>
-  <%= select("order", "filter_status", Order.statuses.keys + ["all"], selected: "all") %>
+  <%= select("order", "filter_status", show_by_order_status, selected: "all") %>
 </div>
-
